Changed to the second mirror.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 		<title>Mirror</title>
 	</head>
 	<body>
-		<p>mirror.test.davidmanouchehri.com</p>
+		<p>mirror2.test.davidmanouchehri.com</p>
 	</body>
 </html>
